--- a/06_dom/one.html
+++ b/06_dom/one.html
@@ -20,8 +20,16 @@
         <h2>Lorem ipsum dolor sit amet.</h2>
         <h2>Lorem ipsum dolor sit amet.</h2>
         <p>Lorem ipsum dolor sit amet.</p>
+
+        <ul>
+            <li class="list-item">One</li>
+            <li class="list-item">Two</li>
+            <li class="list-item">Three</li>
+            <li class="list-item">four</li>
+        </ul>
     </div>
 </body>
+
 <script>
     // How to select elements
 
@@ -44,8 +52,59 @@
     const inText = title.innerText
     console.log(inText); // DOM learning on Tea Or Code
 
-    
+    // querySelectorAll
+
+    const list = document.querySelectorAll('li')
+    console.log(list);  
+
+    // NodeList(3) [li, li, li]
+    // NodeList objects are collections of nodes, usually returned by properties such as Node.childNodes and methods such as document.querySelectorAll().
+
+    //Note: Although NodeList is not an Array, it is possible to iterate over it with forEach(). It can also be converted to a real Array using Array.from().
+
+    // Note : We can access NodeList like an array i.e. list[0]
+
+    list[0].style.color = 'green' // first li is set to green
+
+    const heading = document.querySelectorAll('h1')
+    heading[0].style.color = 'blue'  // set head to blue
+
+    // forEach in NodeList
+
+    // list.forEach( (li) => {
+    //     li.style.color = 'yellow'
+    //     li.style.margin = '10px'
+    // })
+
+    // HtmlCollection : An HTMLCollection is an array-like collection (list) of HTML elements.
+
+   // The elements in a collection can be accessed by index (starts at 0).
+
+   //The length Property returns the number of elements in the collection.
+
+   //We can access HTMLCollection using document objects in JavaScript. These objects are said to return HTMLCollection when in use.
+
+// These include;
+// getElementsByTagName()
+// getElementsByClassName()
+// children
+// document.forms
+
+    const htmlCollection = document.getElementsByClassName('list-item')
+    console.log(htmlCollection);  // HTMLCollection(4) [li.list-item, li.list-item, li.list-item, li.list-item]
+
+    // Change HTMLCollection to Array
+
+    const myCovertedArray = Array.from(htmlCollection);
+    console.log(myCovertedArray);
+
+    myCovertedArray.forEach( (li)=> {
+        li.style.color = 'orange'
+        li.style.padding = '10px'
+    })
+
 
 
 </script>
+
 </html>
